--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dessin animé – Konrad (10 ans) marque un but</title>
+  <title>Dessin animé – Konrad (10 ans) court et marque</title>
   <style>
     html, body{margin:0; height:100%; background:#0b1220; font-family:system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial}
     .stage{position:fixed; inset:0;}
@@ -17,16 +17,19 @@
 </head>
 <body>
   <div class="stage"><canvas id="film"></canvas></div>
-  <div class="title">Konrad Rayad (10 ans) — « Premier but ! » ⚽🎬</div>
+  <div class="title">Konrad Rayad (10 ans) — il COURT puis marque ! ⚽🏃‍♂️🎬</div>
   <div class="credits">Dessin animé HTML5 Canvas • Boucle automatique • Aucune interaction</div><script>
 (()=>{
   const canvas = document.getElementById('film');
   const ctx = canvas.getContext('2d');
   const DPR = Math.max(1, devicePixelRatio || 1);
-  let W=1280, H=720, groundY=0, gravity=0;
 
+  // Teintes
   const SKIN = '#6b4423'; // peau foncée
   const HAIR = '#111827';
+
+  let W=1280, H=720, groundY=0, gravity=0;
+  let START_PLAYER_X=0, BALL_X=0; // positions de référence pour la séquence d'approche
 
   function resize(){
     W = Math.floor(innerWidth * DPR);
@@ -35,89 +38,201 @@
     canvas.style.width = innerWidth+'px';
     canvas.style.height = innerHeight+'px';
     groundY = H*0.80; gravity = H*1.42;
+
+    // Points-clés de mise en scène
+    START_PLAYER_X = W * 0.14;           // départ plus à gauche
+    BALL_X = W * 0.28;                   // ballon devant le joueur
+
+    // Recalage des entités dépendantes
+    player.scale = Math.max(.7, Math.min(1.2, H/720));
+    player.x = START_PLAYER_X; player.y = groundY;
+    resetBall();
+
+    goal.w = W*.18; goal.h = H*.38; goal.x = W - goal.w - W*.06; goal.y = groundY - goal.h; goal.post=8;
   }
   addEventListener('resize', resize);
-  resize();
 
-  const player = { x: W*0.18, y: groundY, scale: Math.max(.7, Math.min(1.2, H/720)), name:'Konrad Rayad', age:10 };
-  const ball = { x: player.x+60, y: player.y-18, r: Math.max(8, Math.min(18, H*.025)), vx:0, vy:0, spin:0, spinVel:0 };
-  const goal = { w: W*.18, h: H*.38 }; goal.x = W - goal.w - W*.06; goal.y = groundY - goal.h; goal.post=8;
+  // Acteurs
+  const player = { x:0, y:0, scale:1, name:'Konrad Rayad', age:10 };
+  const ball = { x:0, y:0, r:12, vx:0, vy:0, spin:0, spinVel:0 };
+  const goal = { x:0, y:0, w:0, h:0, post:8 };
 
+  // Confettis
   const confetti = [];
   const rand=(a,b)=>Math.random()*(b-a)+a;
   function burst(x,y){ confetti.length=0; for(let i=0;i<85;i++) confetti.push({x,y,vx:Math.cos(i/85*2*Math.PI)*rand(110,260),vy:Math.sin(i/85*2*Math.PI)*rand(90,220)*-1,life:rand(550,900),t:performance.now(),s:rand(2,4)*DPR}); }
 
+  // Décor
   function skyAndGrass(){
     const g=ctx.createLinearGradient(0,0,0,H); g.addColorStop(0,'#8ec5ff'); g.addColorStop(1,'#e0f2fe');
     ctx.fillStyle=g; ctx.fillRect(0,0,W,H);
+    // soleil
     ctx.beginPath(); ctx.arc(W*.08,H*.12,Math.min(W,H)*.06,0,Math.PI*2); ctx.fillStyle='#fde68a'; ctx.fill();
+    // pelouse
     const grass=ctx.createLinearGradient(0,groundY,0,H); grass.addColorStop(0,'#16a34a'); grass.addColorStop(1,'#065f46');
     ctx.fillStyle=grass; ctx.fillRect(0,groundY,W,H-groundY);
   }
 
   function drawGoal(impact){
     ctx.save(); ctx.lineWidth=goal.post*DPR; ctx.strokeStyle='#fff'; ctx.strokeRect(goal.x, goal.y, goal.w, goal.h);
-    const cols=10, rows=8, dx=goal.w/cols, dy=goal.h/rows, now=performance.now(); ctx.beginPath();
-    for(let i=1;i<cols;i++){const x=goal.x+i*dx;let extraY=0;if(impact){const t=now-impact.t;const d=Math.hypot(x-impact.x,(goal.y+goal.h*.5)-impact.y);extraY=Math.sin(t/60)*Math.exp(-d/180)*8*DPR;}ctx.moveTo(x,goal.y);ctx.lineTo(x,goal.y+goal.h+extraY);} 
-    for(let j=1;j<rows;j++){const y=goal.y+j*dy;let extraX=0;if(impact){const t=now-impact.t;const d=Math.hypot((goal.x+goal.w*.5)-impact.x,y-impact.y);extraX=Math.sin(t/70)*Math.exp(-d/180)*6*DPR;}ctx.moveTo(goal.x,y);ctx.lineTo(goal.x+goal.w+extraX,y);} 
-    ctx.strokeStyle='rgba(255,255,255,.55)'; ctx.lineWidth=1.3*DPR; ctx.stroke(); ctx.restore();
+    // filet ondulant
+    const cols=10, rows=8, dx=goal.w/cols, dy=goal.h/rows, now=performance.now();
+    ctx.beginPath();
+    for(let i=1;i<cols;i++){
+      const x=goal.x+i*dx; let extraY=0;
+      if(impact){ const t=now-impact.t; const d=Math.hypot(x-impact.x,(goal.y+goal.h*.5)-impact.y); extraY=Math.sin(t/60)*Math.exp(-d/180)*8*DPR; }
+      ctx.moveTo(x,goal.y); ctx.lineTo(x,goal.y+goal.h+extraY);
+    }
+    for(let j=1;j<rows;j++){
+      const y=goal.y+j*dy; let extraX=0;
+      if(impact){ const t=now-impact.t; const d=Math.hypot((goal.x+goal.w*.5)-impact.x,y-impact.y); extraX=Math.sin(t/70)*Math.exp(-d/180)*6*DPR; }
+      ctx.moveTo(goal.x,y); ctx.lineTo(goal.x+goal.w+extraX,y);
+    }
+    ctx.strokeStyle='rgba(255,255,255,.55)'; ctx.lineWidth=1.3*DPR; ctx.stroke();
+    ctx.restore();
   }
 
-  function drawPlayer(run=0, kick=0){
-    const s=player.scale, x=player.x, y=player.y; ctx.save(); ctx.translate(x,y);
+  // Personnage
+  function drawPlayer(run=0, kick=0, bob=0){
+    const s=player.scale, x=player.x, y=player.y - bob; // bob = léger rebond vertical
+    ctx.save(); ctx.translate(x,y);
+
+    // ombre
     ctx.fillStyle='rgba(0,0,0,.22)'; ctx.beginPath(); ctx.ellipse(30*s,2,40*s,10*s,0,0,Math.PI*2); ctx.fill();
-    const legSwing=Math.sin(run*2*Math.PI)*6*s;
-    ctx.strokeStyle=HAIR; ctx.lineWidth=6*s*DPR; ctx.lineCap='round'; ctx.beginPath();
-    ctx.moveTo(0,-10*s); ctx.lineTo(15*s+legSwing,0);
-    const kickOff=kick*26*s;
+
+    // jambes
+    const legSwing = Math.sin(run*2*Math.PI)*6*s; // oscillation
+    ctx.strokeStyle=HAIR; ctx.lineWidth=6*s*DPR; ctx.lineCap='round';
+    ctx.beginPath();
+    ctx.moveTo(0,-10*s); ctx.lineTo(15*s+legSwing,0); // jambe G
+    const kickOff = kick*26*s; // jambe D pour le tir
     ctx.moveTo(10*s,-12*s); ctx.lineTo(35*s+kickOff,0);
     ctx.stroke();
+
+    // short
     ctx.fillStyle='#1e40af'; ctx.fillRect(-8*s,-42*s,40*s,32*s);
+    // buste + col
     ctx.fillStyle='#3b82f6'; ctx.fillRect(-12*s,-90*s,48*s,50*s);
     ctx.fillStyle='#1e3a8a'; ctx.fillRect(-12*s,-90*s,48*s,8*s);
+    // numéro
     ctx.fillStyle='#fff'; ctx.font=`${18*s}px bold system-ui`; ctx.textAlign='center'; ctx.fillText('10',12*s,-57*s);
+    // bras (peau foncée)
     ctx.strokeStyle=SKIN; ctx.lineWidth=6*s*DPR; ctx.beginPath();
     ctx.moveTo(36*s,-80*s); ctx.lineTo(56*s,-66*s);
     ctx.moveTo(-10*s,-80*s); ctx.lineTo(-28*s,-66*s);
     ctx.stroke();
+    // tête (peau foncée)
     ctx.beginPath(); ctx.arc(12*s,-110*s,18*s,0,Math.PI*2); ctx.fillStyle=SKIN; ctx.fill();
+    // cheveux + traits
     ctx.fillStyle=HAIR; ctx.beginPath(); ctx.arc(12*s,-118*s,20*s,Math.PI*1.1,Math.PI*1.9); ctx.fill();
-    ctx.fillStyle=HAIR; ctx.beginPath(); ctx.arc(6*s,-112*s,2.2*s,0,Math.PI*2); ctx.fill(); ctx.beginPath(); ctx.arc(18*s,-112*s,2.2*s,0,Math.PI*2); ctx.fill();
+    ctx.fillStyle=HAIR; ctx.beginPath(); ctx.arc(6*s,-112*s,2.2*s,0,Math.PI*2); ctx.fill();
+    ctx.beginPath(); ctx.arc(18*s,-112*s,2.2*s,0,Math.PI*2); ctx.fill();
     ctx.strokeStyle=HAIR; ctx.lineWidth=2*DPR; ctx.beginPath(); ctx.arc(12*s,-105*s,6*s,0,Math.PI); ctx.stroke();
+
     ctx.restore();
-    ctx.save(); ctx.fillStyle='rgba(255,255,255,.9)'; ctx.font=`${14*DPR}px system-ui`; ctx.fillText(`${player.name} – 10 ans`, x-6*DPR, y-125*s); ctx.restore();
+
+    // légende
+    ctx.save(); ctx.fillStyle='rgba(255,255,255,.9)'; ctx.font=`${14*DPR}px system-ui`; ctx.fillText(`${player.name} – 10 ans`, x-6*DPR, player.y-125*s-bob); ctx.restore();
   }
 
+  // Ballon
   function drawBall(){
     ctx.save(); ctx.translate(ball.x,ball.y); ctx.rotate(ball.spin);
+    // ombre
     const sh=Math.max(.3,1-(groundY-ball.y)/300);
     ctx.save(); ctx.translate(0,ball.r+2); ctx.scale(1,.35*sh); ctx.fillStyle='rgba(0,0,0,.25)'; ctx.beginPath(); ctx.arc(0,0,ball.r*1.3,0,Math.PI*2); ctx.fill(); ctx.restore();
+    // ballon
     ctx.fillStyle='#fff'; ctx.beginPath(); ctx.arc(0,0,ball.r,0,Math.PI*2); ctx.fill(); ctx.lineWidth=1.5*DPR; ctx.strokeStyle='#11182733'; ctx.stroke();
     ctx.strokeStyle=HAIR; for(let i=0;i<6;i++){ctx.rotate(Math.PI/3); ctx.beginPath(); ctx.moveTo(0,0); ctx.lineTo(ball.r*.9,0); ctx.stroke();}
     ctx.restore();
   }
 
+  // Confetti
   function drawConfetti(){
     const now=performance.now();
-    for(const p of confetti){const age=now-p.t;if(age>p.life){p.dead=true;continue;}p.vy+=gravity*0.002*(1/60);p.x+=p.vx*(1/60);p.y+=p.vy*(1/60);ctx.fillStyle=`hsl(${(age/4)%360} 80% 60%)`;ctx.fillRect(p.x,p.y,p.s,p.s);}for(let i=confetti.length-1;i>=0;i--) if(confetti[i].dead) confetti.splice(i,1);
+    for(const p of confetti){
+      const age=now-p.t; if(age>p.life){p.dead=true; continue;}
+      p.vy+=gravity*0.002*(1/60); p.x+=p.vx*(1/60); p.y+=p.vy*(1/60);
+      ctx.fillStyle=`hsl(${(age/4)%360} 80% 60%)`; ctx.fillRect(p.x,p.y,p.s,p.s);
+    }
+    for(let i=confetti.length-1;i>=0;i--) if(confetti[i].dead) confetti.splice(i,1);
   }
 
-  const SEG={APPROACH:0,KICKFLY:1,GOAL:2,WIDE:3}; let seg=SEG.APPROACH, segStart=performance.now(); let impact=null;
-  function goto(next){seg=next;segStart=performance.now();}
-  function resetBall(){ball.x=player.x+60; ball.y=player.y-18; ball.vx=0; ball.vy=0; ball.spin=0; ball.spinVel=0;}
-  function primeShot(){const t=1.05; const targetX=goal.x+goal.w*.18; const targetY=goal.y+goal.h*rand(.22,.6); const dx=targetX-ball.x, dy=targetY-ball.y; const vx0=dx/t; const vy0=(dy-.5*gravity*t*t)/t; ball.vx=vx0; ball.vy=vy0; ball.spinVel=Math.sign(vx0)*rand(5,9);}
+  // Helpers
+  function resetBall(){ ball.r = Math.max(8, Math.min(18, H*.025)); ball.x = BALL_X; ball.y = groundY - 18; ball.vx=0; ball.vy=0; ball.spin=0; ball.spinVel=0; }
+  function primeShot(){
+    const t = 1.05;
+    const targetX = goal.x + goal.w*.18;
+    const targetY = goal.y + goal.h*rand(.22,.6);
+    const dx = targetX - ball.x, dy = targetY - ball.y;
+    const vx0 = dx / t; const vy0 = (dy - .5*gravity*t*t) / t;
+    ball.vx=vx0; ball.vy=vy0; ball.spinVel = Math.sign(vx0)*rand(5,9);
+  }
 
+  // Timeline
+  const SEG={APPROACH:0,KICKFLY:1,GOAL:2,WIDE:3};
+  let seg=SEG.APPROACH, segStart=performance.now();
+  let impact=null;
+
+  function goto(next){ seg=next; segStart=performance.now(); }
+
+  // Boucle
   let last=performance.now();
   function loop(){
     const now=performance.now(); const dt=(now-last)/1000; last=now;
+
     ctx.clearRect(0,0,W,H); skyAndGrass(); drawGoal(impact);
-    if(seg===SEG.APPROACH){ drawPlayer((now-segStart)/900,0); drawBall(); if(now-segStart>900){goto(SEG.KICKFLY); primeShot();}}
-    else if(seg===SEG.KICKFLY){ const kickProg=Math.min(1,(now-segStart)/260); drawPlayer((now-segStart)/800,kickProg); ball.vy+=gravity*dt; ball.x+=ball.vx*dt; ball.y+=ball.vy*dt; ball.spin+=ball.spinVel*dt; drawBall(); if(!impact && ball.x>=goal.x && ball.y>=goal.y && ball.y<=goal.y+goal.h){impact={x:ball.x,y:ball.y,t:now}; burst(goal.x+goal.w*.6,ball.y); goto(SEG.GOAL);} if(ball.y+ball.r>=groundY){ball.y=groundY-ball.r; impact={x:goal.x+goal.w*.95,y:goal.y+goal.h*.5,t:now}; burst(goal.x+goal.w*.6,goal.y+goal.h*.5); goto(SEG.GOAL);}}
-    else if(seg===SEG.GOAL){ drawPlayer(0,1); drawBall(); drawConfetti(); if(now-segStart>1200) goto(SEG.WIDE); }
-    else if(seg===SEG.WIDE){ drawPlayer(0,0); drawBall(); drawConfetti(); const p=Math.min(1,(now-segStart)/1200); const grd=ctx.createRadialGradient(W*.5,H*.5,Math.min(W,H)*(.2+.3*(1-p)),W*.5,H*.5,Math.min(W,H)*.7); grd.addColorStop(0,'rgba(0,0,0,0)'); grd.addColorStop(1,'rgba(0,0,0,.35)'); ctx.fillStyle=grd; ctx.fillRect(0,0,W,H); if(now-segStart>1400){impact=null;confetti.length=0;resetBall();goto(SEG.APPROACH);}}
+
+    if(seg===SEG.APPROACH){
+      // progression 0→1 sur ~1.1s
+      const dur = 1100; const prog = Math.min(1, (now-segStart)/dur);
+      // Course : déplacement du joueur vers le ballon, avec léger rebond
+      player.x = START_PLAYER_X + (BALL_X - 60 - START_PLAYER_X) * prog;
+      const bob = Math.abs(Math.sin(prog*Math.PI*4)) * 6 * player.scale; // rebond
+      drawPlayer(prog, 0, bob);
+      drawBall();
+      if(prog>=1){ goto(SEG.KICKFLY); primeShot(); }
+    }
+    else if(seg===SEG.KICKFLY){
+      const kickProg = Math.min(1, (now-segStart)/260);
+      // maintien légèrement le rebond pour la fluidité
+      const bob = Math.abs(Math.sin((now-segStart)/120)) * 4 * player.scale;
+      drawPlayer((now-segStart)/800, kickProg, bob);
+
+      // Physique du ballon
+      ball.vy += gravity*dt; ball.x += ball.vx*dt; ball.y += ball.vy*dt; ball.spin += ball.spinVel*dt;
+      drawBall();
+
+      // Détection but
+      if(!impact && ball.x>=goal.x && ball.y>=goal.y && ball.y<=goal.y+goal.h){
+        impact={x:ball.x,y:ball.y,t:now}; burst(goal.x+goal.w*.6, ball.y); goto(SEG.GOAL);
+      }
+      // Sécurité si rebond au sol
+      if(ball.y+ball.r>=groundY){ ball.y=groundY-ball.r; impact={x:goal.x+goal.w*.95,y:goal.y+goal.h*.5,t:now}; burst(goal.x+goal.w*.6, goal.y+goal.h*.5); goto(SEG.GOAL); }
+    }
+    else if(seg===SEG.GOAL){
+      drawPlayer(0,1,0); drawBall(); drawConfetti();
+      if(now-segStart>1200) goto(SEG.WIDE);
+    }
+    else if(seg===SEG.WIDE){
+      drawPlayer(0,0,0); drawBall(); drawConfetti();
+      // Vignette pour le plan large
+      const p = Math.min(1,(now-segStart)/1200);
+      const grd = ctx.createRadialGradient(W*.5,H*.5,Math.min(W,H)*(.2+.3*(1-p)), W*.5,H*.5, Math.min(W,H)*.7);
+      grd.addColorStop(0,'rgba(0,0,0,0)'); grd.addColorStop(1,'rgba(0,0,0,.35)');
+      ctx.fillStyle=grd; ctx.fillRect(0,0,W,H);
+      if(now-segStart>1400){ impact=null; confetti.length=0; // reset scène
+        player.x = START_PLAYER_X; player.y = groundY; resetBall(); goto(SEG.APPROACH); }
+    }
+
     requestAnimationFrame(loop);
   }
-  resetBall(); loop();
+
+  // Démarrage
+  resize();
+  // Place le joueur au départ et le ballon devant
+  player.x = START_PLAYER_X; player.y = groundY; resetBall();
+  loop();
 })();
 </script></body>
 </html>
